tests/TypingSpec/invalid/prog/polarized-data.algst
data NotAProtocol
    = NotAMsg -Int
--  | ActuallyAllowed +Int 
